--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/passport": "^11.9",
@@ -15,7 +16,8 @@
         "nesbot/carbon": "^2.71",
         "nwidart/laravel-modules": "^10.0",
         "psr/simple-cache": "^2.0",
-        "spatie/laravel-activitylog": "^4.7"
+        "spatie/laravel-activitylog": "^4.7",
+        "ysgao/php-zip": "^0.2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
